--- a/conway/Base.lproj/Main.storyboard
+++ b/conway/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7519.1" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7519.1" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7513.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -35,13 +35,13 @@
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="9uo-fn-2KK">
                                 <rect key="frame" x="14" y="401" width="572" height="31"/>
                                 <connections>
-                                    <action selector="densitySlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="IKw-sP-gpL"/>
+                                    <action selector="changeInitialDensity:" destination="BYZ-38-t0r" eventType="valueChanged" id="606-qZ-DG2"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aTz-Mb-qui">
                                 <rect key="frame" x="542" y="559" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sGQ-Dw-1sr">
@@ -53,17 +53,48 @@
                                     <action selector="resetBoard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="T2b-MH-F29"/>
                                 </connections>
                             </button>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minimumValue="10" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="DiA-Xn-E2K">
+                                <rect key="frame" x="16" y="456" width="94" height="29"/>
+                                <connections>
+                                    <action selector="changeBoardWidth:" destination="BYZ-38-t0r" eventType="valueChanged" id="hOQ-Nb-ueX"/>
+                                </connections>
+                            </stepper>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minimumValue="10" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="vA2-Xy-dB3">
+                                <rect key="frame" x="16" y="514" width="94" height="29"/>
+                                <connections>
+                                    <action selector="changeBoardHeight:" destination="BYZ-38-t0r" eventType="valueChanged" id="Jow-RQ-dCL"/>
+                                </connections>
+                            </stepper>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7j-lC-2F1">
+                                <rect key="frame" x="126" y="460" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xEg-U0-6PX">
+                                <rect key="frame" x="126" y="522" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="UyN-a8-RDv" firstAttribute="top" secondItem="JCO-lt-57G" secondAttribute="bottom" constant="25" id="1ai-QT-nxu"/>
                             <constraint firstItem="9uo-fn-2KK" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="5TS-yn-N9w"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aTz-Mb-qui" secondAttribute="bottom" constant="20" id="61c-Xp-WZM"/>
+                            <constraint firstItem="DiA-Xn-E2K" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="6tr-ZG-S9A"/>
                             <constraint firstAttribute="centerX" secondItem="sGQ-Dw-1sr" secondAttribute="centerX" id="6zK-gP-Bo8"/>
+                            <constraint firstItem="xEg-U0-6PX" firstAttribute="centerY" secondItem="vA2-Xy-dB3" secondAttribute="centerY" constant="4" id="EqB-qL-8lw"/>
+                            <constraint firstItem="DiA-Xn-E2K" firstAttribute="centerY" secondItem="u7j-lC-2F1" secondAttribute="centerY" id="GzD-9M-oSp"/>
+                            <constraint firstAttribute="centerY" secondItem="vA2-Xy-dB3" secondAttribute="centerY" constant="-228.5" id="HcH-aG-PBS"/>
+                            <constraint firstItem="xEg-U0-6PX" firstAttribute="leading" secondItem="vA2-Xy-dB3" secondAttribute="trailing" constant="16" id="KhN-3h-nMy"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="sGQ-Dw-1sr" secondAttribute="bottom" constant="30" id="Lag-ax-8ij"/>
+                            <constraint firstItem="vA2-Xy-dB3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="M7p-qo-f9l"/>
                             <constraint firstItem="9uo-fn-2KK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Ntu-mn-CNp"/>
                             <constraint firstAttribute="centerX" secondItem="9uo-fn-2KK" secondAttribute="centerX" id="PCx-8X-oex"/>
                             <constraint firstItem="JCO-lt-57G" firstAttribute="top" secondItem="9uo-fn-2KK" secondAttribute="bottom" constant="25" id="VZO-Lq-BB8"/>
+                            <constraint firstItem="DiA-Xn-E2K" firstAttribute="top" secondItem="u7j-lC-2F1" secondAttribute="top" constant="-4" id="Wi1-9n-Di3"/>
                             <constraint firstAttribute="centerX" secondItem="JCO-lt-57G" secondAttribute="centerX" id="fSa-9F-25M"/>
                             <constraint firstAttribute="centerX" secondItem="UyN-a8-RDv" secondAttribute="centerX" id="myn-Z2-IeN"/>
                             <constraint firstItem="aTz-Mb-qui" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="pkI-GE-f1V"/>
@@ -71,7 +102,11 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="densitySlider" destination="9uo-fn-2KK" id="S60-9Z-DPj"/>
+                        <outlet property="boardHeight" destination="xEg-U0-6PX" id="Qqc-uh-D0L"/>
+                        <outlet property="boardHeightStepper" destination="vA2-Xy-dB3" id="MGv-Go-0mH"/>
+                        <outlet property="boardWidth" destination="u7j-lC-2F1" id="Veg-eo-a95"/>
+                        <outlet property="boardWidthStepper" destination="DiA-Xn-E2K" id="jFZ-3I-82j"/>
+                        <outlet property="changeInitialDensity" destination="9uo-fn-2KK" id="Hhy-8Y-Lys"/>
                         <outlet property="densityValue" destination="JCO-lt-57G" id="SrM-xW-hS9"/>
                         <outlet property="iterationDisplay" destination="aTz-Mb-qui" id="X82-dx-ECz"/>
                         <outlet property="resetButton" destination="sGQ-Dw-1sr" id="ebV-ky-bub"/>
